# Toast

./: .gitignore  .gitmodules  .travis.yml  README.md  TriviaBot.sln
Toast/: CMakeLists.txt
Toast/bot/: BotConfig.cpp  BotConfig.hpp  ClientConnection.cpp  ClientConnection.hpp  DiscordAPI.cpp  GatewayHandler.cpp  GatewayHandler.hpp  Logger.hpp  Toast.cpp  TriviaGame.cpp
Toast/bot/data_structures/: Channel.hpp  GuildMember.hpp  Role.hpp  User.hpp
Toast/bot/db/: schema.sqlite
Toast/bot/http/: HTTP.hpp
Toast/bot/js/: V8Instance.cpp
Toast/data_management/: LoadDB.cpp
TriviaBot/: CMakeLists.txt  TriviaBot.vcxproj  TriviaBot.vcxproj.filters
TriviaBot/CSV/: LoadDB.cpp  trivia.csv
TriviaBot/bot/: APIHelper.cpp  APIHelper.hpp  BotConfig.cpp  BotConfig.hpp  ClientConnection.cpp  ClientConnection.hpp  DiscordAPI.cpp  DiscordAPI.hpp  GatewayHandler.cpp  GatewayHandler.hpp  Logger.cpp  ProtocolHandler.h  Source.cpp  TriviaBot.cpp  TriviaBot.cpp.save  TriviaGame.cpp  TriviaGame.hpp
TriviaBot/bot/data_structures/: Channel.hpp  Guild.hpp  GuildMember.hpp  Role.hpp  Text.txt  User.hpp
TriviaBot/bot/db/: schema.sqlite
TriviaBot/bot/http/: HTTP.cpp  HTTPHelper.cpp  HTTPHelper.hpp
TriviaBot/bot/js/: CommandHelper.cpp  CommandHelper.hpp  V8Instance.cpp  V8Instance.hpp
TriviaBot/bot/json/: json.hpp
TriviaBot/data_management/: LoadDB.cpp
TriviaBot/db/: schema.sqlite
